<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wizard_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/wizardicons_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/wizard_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="40dp"
                android:text="@string/wizard_small_text"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="60dp"
                android:background="@drawable/green_btn_bg"
                android:text="Start"
                android:textColor="@color/White"
                android:textSize="12sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
