<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/wizard_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/wizardicons_heart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/wizard_finish_big_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/wizard_finish_small_title"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Wizard Finished"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/wizard_finish_small_text"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="180dp"
                    android:background="@drawable/green_btn_bg"
                    android:textColor="@color/White"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:textSize="12sp"
                    android:text="Finish" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>