<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/wizard_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_title"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/wizardicons_heart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Creating your categories."
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/custom_categories_text"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="12sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left"
                        android:text="Your category names"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#e9e9e9" />

                    <Button
                        android:layout_width="200dp"
                        android:background="@drawable/blue_btn_bg"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/White"
                        android:text="Add Another Category"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="Tips."
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/custom_categories_text_tips"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="12sp"
                        android:visibility="visible" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_chevron_left_24dp"
                        android:text="Back"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/ic_chevron_right_24dp"
                        android:text="Next"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="180dp"
                    android:background="@drawable/red_btn_bg"
                    android:textColor="@color/White"
                    android:layout_height="30dp"
                    android:layout_marginTop="30dp"
                    android:text="Cancel"
                    android:textSize="12sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>