<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dltexported.wizard.CustomAspectsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/wizardicons_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/custome_aspects_text_title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/custome_aspects_text_body"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="12sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="Financial Mastery"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Relative Importance" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="#e9e9e9"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="30%" />
            </LinearLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:max="100"
                android:progress="30"
                android:progressTint="@color/colorPrimary"
                android:thumbTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2dp"
                android:layout_marginTop="10dp"
                android:background="#e9e9e9"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:text="Exam Preparation"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Relative Importance" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="#e9e9e9"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="15%" />
            </LinearLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:max="100"
                android:progress="15"
                android:progressTint="@color/colorPrimary"
                android:thumbTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2dp"
                android:layout_marginTop="10dp"
                android:background="#e9e9e9"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Relationships"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="Relative Importance" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="#e9e9e9"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="75%" />
            </LinearLayout>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:max="100"
                android:progress="75"
                android:progressTint="@color/colorPrimary"
                android:thumbTint="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2dp"
                android:layout_marginTop="10dp"
                android:background="#e9e9e9"></View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tv_aspect_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_chevron_left_24dp"
                    android:text="Back"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_aspect_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawableRight="@drawable/ic_chevron_right_24dp"
                    android:text="Next"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="180dp"
                android:background="@drawable/red_btn_bg"
                android:textColor="@color/White"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:text="Cancel"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>